--- a/app/index.html
+++ b/app/index.html
@@ -354,7 +354,7 @@
                                     </li>
                                     <li class="timeline-inverted">
                                         <div class="timeline-image">
-                                            <h4>The
+                                            <h4 style="padding: 25% 0;">The
                                                 <br>Journey Will
                                                 <br>Continue!</h4>
                                         </div>
@@ -375,55 +375,11 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-4">
-                                <div class="team-member">
-                                    <img src="images/team/1.jpg" class="images-responsive img-circle" alt="">
-                                    <h4>Kay Garland</h4>
-                                    <p class="text-muted">Lead Designer</p>
-                                    <ul class="list-inline social-buttons">
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                                        </li>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                                        </li>
-                                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="team-member">
-                                    <img src="images/team/2.jpg" class="images-responsive img-circle" alt="">
-                                    <h4>Larry Parker</h4>
-                                    <p class="text-muted">Lead Marketer</p>
-                                    <ul class="list-inline social-buttons">
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                                        </li>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                                        </li>
-                                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="team-member">
-                                    <img src="images/team/3.jpg" class="images-responsive img-circle" alt="">
-                                    <h4>Diana Pertersen</h4>
-                                    <p class="text-muted">Lead Developer</p>
-                                    <ul class="list-inline social-buttons">
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                                        </li>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                                        </li>
-                                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+
                         </div>
                         <div class="row">
                             <div class="col-lg-8 col-lg-offset-2 text-center">
-                                <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                                <p class="large text-muted">I believe in open source development and rely on platforms such as Travis-CI, GitHub to build my apps. Feel free to suggest me new technologies and ideas to play with.</p>
                             </div>
                         </div>
                     </div>
@@ -435,22 +391,22 @@
                         <div class="row">
                             <div class="col-md-3 col-sm-6">
                                 <a href="https://nodejs.org/en/">
-                                    <img src="images/logos/nodejs.jpg" class="images-responsive img-centered" alt="Node JS Logo">
+                                    <img src="images/logos/nodejs.jpg" class="img-responsive img-centered" alt="Node JS Logo">
                                 </a>
                             </div>
                             <div class="col-md-3 col-sm-6">
                                 <a href="https://www.java.com/en/">
-                                    <img src="images/logos/java.jpg" class="images-responsive img-centered" alt="Java Logo">
+                                    <img src="images/logos/java.jpg" class="img-responsive img-centered" alt="Java Logo">
                                 </a>
                             </div>
                             <div class="col-md-3 col-sm-6">
                                 <a href="https://www.python.org">
-                                    <img src="images/logos/python.jpg" class="images-responsive img-centered" alt="Python Logo">
+                                    <img src="images/logos/python.jpg" class="img-responsive img-centered" alt="Python Logo">
                                 </a>
                             </div>
                             <div class="col-md-3 col-sm-6">
                                 <a href="http://php.net">
-                                    <img src="images/logos/php.jpg" class="images-responsive img-centered" alt="PHP Logo">
+                                    <img src="images/logos/php.jpg" class="img-responsive img-centered" alt="PHP Logo">
                                 </a>
                             </div>
                         </div>
