--- a/app/index.html
+++ b/app/index.html
@@ -375,7 +375,11 @@
                             </div>
                         </div>
                         <div class="row">
-
+                            <div class="col-lg-8 col-lg-offset-2 text-center">
+                                <p>
+                                    Angular.JS based skill visualization Coming Soon...
+                                </p>
+                            </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -508,9 +512,12 @@
                                         <h2>Price Elasticity for books</h2>
                                         <p class="item-intro text-muted">Hadoop MapReduce App & Web UI</p>
                                         <img class="images-responsive img-centered" src="images/portfolio/hadoop.png" alt="Price Elasticity Web UI" width="100%" height="100%">
-                                        <p><a href="https://github.com/audip/priceelasticity">Predictive price modelling for elastic pricing</a> is a Apache Hadoop project built to effectively compute the price that book resulting in maximum sales revenue.
+                                        <p>
+                                            Can be viewed at <a href="priceelasticity" >Price Elasticity of Books</a>
+                                        </p>
+                                        <p><a href="priceelasticity">Predictive price modelling for elastic pricing</a> is a Apache Hadoop project built to effectively compute the price that book resulting in maximum sales revenue.
                                             This is achieved by parralelly processing data using Exponential smoothing and Multiple jobs written in Java.</p>
-                                        <p><a href="https://github.com/audip/priceelasticitywebui">Web UI</a> for demonstration of the app was built using JavaScript, jQuery, HTML5 & CSS3.</p>
+                                        <p><a href="priceelasticity">Web UI</a> for demonstration of the app was built using JavaScript, jQuery, HTML5 & CSS3.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
                                 </div>
@@ -618,7 +625,7 @@
                                         <!-- Project Details Go Here -->
                                         <h2>Renaissance Pirates</h2>
                                         <p class="item-intro text-muted">Viral online game built with PHP</p>
-                                        <img class="images-responsive img-centered" src="images/portfolio/escape-preview.png" alt="">
+                                        <img class="images-responsive img-centered" src="images/portfolio/rp.png" alt="">
                                         <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for
                                             those looking for a simple one page solution to describe your business and offer your projects.</p>
                                         <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
