Skillset section reset

--- a/app/index.html
+++ b/app/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
+    <meta name="description" content="Web home of Aditya's Purandare development projects. Graduate student at Texas A&M University, USA">
     <meta name="author" content="Aditya Purandare">
+    <meta name="keywords" content="Aditya Purandare Website, Aditya, Purandare, APurandare">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya Purandare's Website | Home Page</title>
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
+    <meta name="google-site-verification" content="7S7wPjIN1biqVFz6myWcLWIrNmt3kOEZGPo64X6wOQo" />
 
     <!-- Web Application Manifest -->
     <link rel="manifest" href="manifest.json">
@@ -35,11 +37,9 @@
 
     <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
     <!--
-    <link rel="canonical" href="http://www.example.com/">
+    <link rel="canonical" href="http://www.adityapurandare.com/">
     -->
 
-    <!-- Material Design icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
     <!-- Bootstrap Core CSS -->
     <!-- Latest compiled and minified CSS -->
