Add images ad content to projects

--- a/app/index.html
+++ b/app/index.html
@@ -240,7 +240,7 @@
                                             <i class="fa fa-plus fa-3x"></i>
                                         </div>
                                     </div>
-                                    <img src="images/portfolio/golden.png" class="img-responsive" alt="">
+                                    <img src="images/portfolio/parrot-drone.jpg" class="img-responsive" alt="Parrot Drone Photo">
                                 </a>
                                 <div class="portfolio-caption">
                                     <h4>Voice-navigated Parrot drone</h4>
@@ -254,7 +254,7 @@
                                             <i class="fa fa-plus fa-3x"></i>
                                         </div>
                                     </div>
-                                    <img src="images/portfolio/escape.png" class="img-responsive" alt="">
+                                    <img src="images/portfolio/renassiancepirates.jpg" class="img-responsive" alt="Renassiance Pirates Cover Photo">
                                 </a>
                                 <div class="portfolio-caption">
                                     <h4>Renaissance Pirates</h4>
@@ -268,7 +268,7 @@
                                             <i class="fa fa-plus fa-3x"></i>
                                         </div>
                                     </div>
-                                    <img src="images/portfolio/dreams.png" class="img-responsive" alt="">
+                                    <img src="images/portfolio/buymegroc.jpg" alt="Buy Me Groc Cover Photo" class="img-responsive">
                                 </a>
                                 <div class="portfolio-caption">
                                     <h4>BuyMeGroc</h4>
@@ -597,10 +597,9 @@
                                         <!-- Project Details Go Here -->
                                         <h2>Voice-navigated Parrot drone</h2>
                                         <p class="item-intro text-muted">Intelligent Watson based Node.js App</p>
-                                        <img class="images-responsive img-centered" src="images/portfolio/golden-preview.png" alt="">
-                                        <p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page web template that was
-                                            made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.</p>
-                                        <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/golden-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
+                                        <img class="images-responsive img-centered" src="images/portfolio/parrot-drone.jpg" alt="Parrot Drone Photo">
+                                        <p>Built in less than 24 hours for TAMUHack held in Kyle Field, Texas A&M University, we ought to design a system that can understand natural language and navigate the drone using a person's voice making the experience of deploying a drone much more easier and intuitive. Runs on Node.js to query with IBM's cognitive engine - IBM Watson, and Web interface to control the drone.</p>
+                                        <p>Source code for the project can be viewed at<a href="http://github.com/audip/TamuHackDrone">Parrot AR Drone</a>.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
                                 </div>
@@ -625,10 +624,12 @@
                                         <!-- Project Details Go Here -->
                                         <h2>Renaissance Pirates</h2>
                                         <p class="item-intro text-muted">Viral online game built with PHP</p>
-                                        <img class="images-responsive img-centered" src="images/portfolio/rp.png" alt="">
-                                        <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for
-                                            those looking for a simple one page solution to describe your business and offer your projects.</p>
-                                        <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
+                                        <img class="images-responsive img-centered" src="images/portfolio/renassiancepirates.jpg" alt="Renassiance Pirates Cover Photo">
+                                        <p>
+                                            Game content can be viewed at <a href="rp/">Renassiance Pirates.</a>
+                                        </p>
+                                        <p>The game was designed around the theme of <a href="http://eclectika.org"></a>Eclectika 2014</a>- Rejoicing the Renassiance and not many in NIT Raipur knew about historic events that happened around the world during the Renassiance. That inspired me to create a game to make students aware of landmarks, quotes, events and personalities of the time. The game went viral since the minute it launched, having over 500 players online at a time and introduced scoring across points and time. The web app built on PHP, Ajax, jQuery scaled to host over 1,000 players.</p>
+                                        <p>The<a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
                                 </div>
@@ -653,10 +654,9 @@
                                         <!-- Project Details Go Here -->
                                         <h2>BuyMeGroc</h2>
                                         <p class="item-intro text-muted">Website Development (HTML,CSS,PHP)</p>
-                                        <img class="images-responsive img-centered" src="images/portfolio/dreams-preview.png" alt="">
-                                        <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s
-                                            designed with the Bootstrap framework in mind.</p>
-                                        <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
+                                        <img class="images-responsive img-centered" src="images/portfolio/buymegroc.jpg" alt="Buy Me Groc Cover Photo">
+                                        <p>Built at CodeRed hackathon in November 2015, <a href="buymegroc/">BuyMeGroc</a> was designed as a web app to simplify the mundane task of Grocery Shopping and integrated Walmart Labs' API to fetch and display real time product details. The interface would allow you to post items you need and items you can pick up for others, ensuring you to save time and money.</p>
+                                        <p>Built on PHP, JSON data and Walmart's API to scale the app. Code can be viewed at <a href="http://github.com/audip/BuyMeGroc">BuyMeGroc Github</a>.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
                                 </div>
