Add content to smart home

--- a/app/index.html
+++ b/app/index.html
@@ -570,9 +570,7 @@
                                         <h2>Smart Home Systems</h2>
                                         <p class="item-intro text-muted">Innovative system & app prototype</p>
                                         <iframe width="100%" height="400" class="images-responsive img-centered" src="http://www.youtube.com/embed/NcNSBPWvOLk" frameborder="0" allowfullscreen></iframe>
-                                        <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their
-                                            apps or other projects.</p>
-                                        <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
+                                        <p>Part of coursework of ISYS 624, we analysed and researched what makes for an intuitive and innovative way to interact with Smart Home system and we envisioned it into an app prototype which recevied a lot of praise from professors and students who took the class.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
                                 </div>
@@ -629,7 +627,6 @@
                                             Game content can be viewed at <a href="rp/">Renassiance Pirates.</a>
                                         </p>
                                         <p>The game was designed around the theme of <a href="http://eclectika.org"></a>Eclectika 2014</a>- Rejoicing the Renassiance and not many in NIT Raipur knew about historic events that happened around the world during the Renassiance. That inspired me to create a game to make students aware of landmarks, quotes, events and personalities of the time. The game went viral since the minute it launched, having over 500 players online at a time and introduced scoring across points and time. The web app built on PHP, Ajax, jQuery scaled to host over 1,000 players.</p>
-                                        <p>The<a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
                                 </div>
