--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
             <!-- initial header -->
             <header class="ip-header">
                 <h1 class="ip-logo">
-                    <img class="ip-inner" width="35%" height="50%" viewBox="0 0 300 160"  src="images/preloader.png" class="img-responsive" />
+                    <img class="ip-inner" width="35%" height="50%" viewBox="0 0 300 160" src="images/preloader.png" class="img-responsive img-centered" />
                 </h1>
                 <div class="ip-loader">
                     <svg class="ip-inner" width="60px" height="60px" viewBox="0 0 80 80">
@@ -513,10 +513,10 @@
                                         <p class="item-intro text-muted">Hadoop MapReduce App & Web UI</p>
                                         <img class="images-responsive img-centered" src="images/portfolio/hadoop.png" alt="Price Elasticity Web UI" width="100%" height="100%">
                                         <p>
-                                            Can be viewed at <a href="priceelasticity" >Price Elasticity of Books</a>
+                                            Can be viewed at <a href="priceelasticity">Price Elasticity of Books</a>
                                         </p>
-                                        <p><a href="priceelasticity">Predictive price modelling for elastic pricing</a> is a Apache Hadoop project built to effectively compute the price that book resulting in maximum sales revenue.
-                                            This is achieved by parralelly processing data using Exponential smoothing and Multiple jobs written in Java.</p>
+                                        <p><a href="priceelasticity">Predictive price modelling for elastic pricing</a> is a Apache Hadoop project built to effectively compute the price that book resulting in maximum sales revenue. This is achieved by parralelly
+                                            processing data using Exponential smoothing and Multiple jobs written in Java.</p>
                                         <p><a href="priceelasticity">Web UI</a> for demonstration of the app was built using JavaScript, jQuery, HTML5 & CSS3.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
@@ -570,7 +570,8 @@
                                         <h2>Smart Home Systems</h2>
                                         <p class="item-intro text-muted">Innovative system & app prototype</p>
                                         <iframe width="100%" height="400" class="images-responsive img-centered" src="http://www.youtube.com/embed/NcNSBPWvOLk" frameborder="0" allowfullscreen></iframe>
-                                        <p>Part of coursework of ISYS 624, we analysed and researched what makes for an intuitive and innovative way to interact with Smart Home system and we envisioned it into an app prototype which recevied a lot of praise from professors and students who took the class.</p>
+                                        <p>Part of coursework of ISYS 624, we analysed and researched what makes for an intuitive and innovative way to interact with Smart Home system and we envisioned it into an app prototype which recevied a lot of praise
+                                            from professors and students who took the class.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
                                 </div>
@@ -596,7 +597,8 @@
                                         <h2>Voice-navigated Parrot drone</h2>
                                         <p class="item-intro text-muted">Intelligent Watson based Node.js App</p>
                                         <img class="images-responsive img-centered" src="images/portfolio/parrot-drone.jpg" alt="Parrot Drone Photo">
-                                        <p>Built in less than 24 hours for TAMUHack held in Kyle Field, Texas A&M University, we ought to design a system that can understand natural language and navigate the drone using a person's voice making the experience of deploying a drone much more easier and intuitive. Runs on Node.js to query with IBM's cognitive engine - IBM Watson, and Web interface to control the drone.</p>
+                                        <p>Built in less than 24 hours for TAMUHack held in Kyle Field, Texas A&M University, we ought to design a system that can understand natural language and navigate the drone using a person's voice making the experience
+                                            of deploying a drone much more easier and intuitive. Runs on Node.js to query with IBM's cognitive engine - IBM Watson, and Web interface to control the drone.</p>
                                         <p>Source code for the project can be viewed at<a href="http://github.com/audip/TamuHackDrone">Parrot AR Drone</a>.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
@@ -626,7 +628,10 @@
                                         <p>
                                             Game content can be viewed at <a href="rp/">Renassiance Pirates.</a>
                                         </p>
-                                        <p>The game was designed around the theme of <a href="http://eclectika.org"></a>Eclectika 2014</a>- Rejoicing the Renassiance and not many in NIT Raipur knew about historic events that happened around the world during the Renassiance. That inspired me to create a game to make students aware of landmarks, quotes, events and personalities of the time. The game went viral since the minute it launched, having over 500 players online at a time and introduced scoring across points and time. The web app built on PHP, Ajax, jQuery scaled to host over 1,000 players.</p>
+                                        <p>The game was designed around the theme of
+                                            <a href="http://eclectika.org"></a>Eclectika 2014</a>- Rejoicing the Renassiance and not many in NIT Raipur knew about historic events that happened around the world during the Renassiance. That inspired me to create a game to make students
+                                            aware of landmarks, quotes, events and personalities of the time. The game went viral since the minute it launched, having over 500 players online at a time and introduced scoring across points and time. The
+                                            web app built on PHP, Ajax, jQuery scaled to host over 1,000 players.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
                                 </div>
@@ -652,7 +657,8 @@
                                         <h2>BuyMeGroc</h2>
                                         <p class="item-intro text-muted">Website Development (HTML,CSS,PHP)</p>
                                         <img class="images-responsive img-centered" src="images/portfolio/buymegroc.jpg" alt="Buy Me Groc Cover Photo">
-                                        <p>Built at CodeRed hackathon in November 2015, <a href="buymegroc/">BuyMeGroc</a> was designed as a web app to simplify the mundane task of Grocery Shopping and integrated Walmart Labs' API to fetch and display real time product details. The interface would allow you to post items you need and items you can pick up for others, ensuring you to save time and money.</p>
+                                        <p>Built at CodeRed hackathon in November 2015, <a href="buymegroc/">BuyMeGroc</a> was designed as a web app to simplify the mundane task of Grocery Shopping and integrated Walmart Labs' API to fetch and display real
+                                            time product details. The interface would allow you to post items you need and items you can pick up for others, ensuring you to save time and money.</p>
                                         <p>Built on PHP, JSON data and Walmart's API to scale the app. Code can be viewed at <a href="http://github.com/audip/BuyMeGroc">BuyMeGroc Github</a>.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
