--- a/app/index.html
+++ b/app/index.html
@@ -128,7 +128,7 @@
                 </nav>
 
                 <!-- Header -->
-                <div class="header">
+                <div class="header" style="min-height: 100%;">
                     <div class="container">
                         <div class="intro-text">
                             <div class="circle img-responsive"></div>
