Fonts fixed for mobile

--- a/app/index.html
+++ b/app/index.html
@@ -134,7 +134,7 @@
                             <div class="circle img-responsive"></div>
                             <div class="intro-lead-in">Welcome To My Studio!</div>
                             <div class="intro-heading">It's Nice To Meet You</div>
-                            <a href="#github-section" class="page-scroll btn btn-xl">Tell Me More <i class="fa fa-lg fa-chevron-circle-down"></i></a>
+                            <a href="#github-section" class="page-scroll btn btn-xl">Tell Me More  <i class="fa fa-lg fa-chevron-circle-down"></i></a>
                         </div>
                     </div>
                 </div>
@@ -464,7 +464,7 @@
                 </section>
 
                 <footer>
-                    <div class="container">
+                    <div class="container foot">
                         <div class="row">
                             <div class="col-md-4">
                                 <span class="copyright">Copyright &copy; Aditya Purandare 2016</span>
